# ostore

./: .gitignore  CMakeLists.txt  readme.md
commandlinedebug/: commandlinedebug.cbp
commandlinetool/: CMakeLists.txt  bld_tool.sh  commandlinetool.cpp  debug.cpp  debug.h  iobase.cpp  iobase.h  ostorecmdconfig.h.in  parameters.cpp  parameters.h
docs/: File Data Structure Description.odt  OStoreCodeErrorHandling.md  disklayout.ods  ostoreapi.md  ostorecommandlinetool.md  ostorefileformat.md  todo.md
examples/: CMakeLists.txt  readanewobject.c  writeanewobject.c
export/: ostore.h
inc/: debug.h  ostore.h  ostore_internal.h  ostoreconfig.h.in
ostore/: CMakeLists.txt  ostore.c  ostore_internal.c
ostorecmd/: CMakeLists.txt  bld_tool.sh  commandlinetool.cpp  debug.h  ostorecmdconfig.h.in  parameters.cpp
src/: CMakeLists.txt  ostore.c  ostore_internal.c
test/: .gitignore  add_delete_object.c  add_multiple_obj.c  add_remove.cbp  bld_add_delete_object.sh  bld_add_multiple_obj.sh  bld_makeempty.sh  bld_makestring.sh  bld_readstore.sh  bld_shrink.sh  main.c  makeempty.c  makestring.c  readstore.c  readtest.cbp  shrinkobject.c  shrinktest.cbp  stringtest.cbp  test.cbp  test.depend  test.store
test_stores/: Makefile  test.store
